--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -15,7 +15,9 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      - ubuntu-latest
+      - macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
