github actions: try os matrix.
Passing an array to runs-on is hanging indefinitely. I don't think it
recognizes the targets.

--- a/.github/workflows/makefile.yaml
+++ b/.github/workflows/makefile.yaml
@@ -15,9 +15,16 @@ env:
 
 jobs:
   build:
-    runs-on:
-      - ubuntu-latest
-      - macos-latest
+    strategy:
+      matrix:
+        os:
+          [
+            ubuntu-latest,
+            macos-latest,
+          ]
+
+    runs-on: ${{ matrix.os }}
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
